src/css/fpb.css
/* Theming */
[data-bs-theme='dark'],
[data-fp-theme='dark'] {
  --fp-select-toggle-img: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'%3e%3cpath fill='none' stroke='%23dee2e6' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='m2 5 6 6 6-6'/%3e%3c/svg%3e") !important;

  --fp-body-bg: #212529 !important;
  --fp-body-color: #dee2e6 !important;
  --fp-body-bg-rgb: 33, 37, 41 !important;

  --fp-border-color: #495057 !important;
  --fp-border-color-rgb: 73, 80, 87 !important;
  --fp-border-color-translucent: rgba(255, 255, 255, 0.15) !important;
  --fp-tertiary-color: rgba(222, 226, 230, 0.5) !important;
}

:root,
[data-bs-theme='light'],
[data-fp-theme='light'] {
  --fp-select-toggle-img: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'%3e%3cpath fill='none' stroke='%23343a40' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='m2 5 6 6 6-6'/%3e%3c/svg%3e");

  --fp-body-bg: #fff;
  --fp-body-color: #212529;
  --fp-body-bg-rgb: 255, 255, 255;

  --fp-border-color: #dee2e6;
  --fp-border-color-rgb: 222, 226, 230;
  --fp-border-color-translucent: rgba(0, 0, 0, 0.175);
  --fp-tertiary-color: rgba(33, 37, 41, 0.5);
}

:root {
  --fp-dark: #212529;
  --fp-light: #fff;

  --fp-primary: #0d6efd;
  --fp-secondary: #ff8239;
  --fp-hover-color: #0b5ed7;
  --fp-ring-color: #86b7fe;
  --fp-ring-shadow: rgba(13, 110, 253, 0.25) 0 0 0 0.25rem;
  --fp-danger-rgb: 220, 53, 69;

  --fp-border-radius-sm: 0.25rem;
  --fp-border-radius: 0.375rem;
  --fp-border-radius-lg: 0.5rem;

  --fp-box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
  --fp-box-shadow-sm: 0 0.125rem 0.25rem rgba(0, 0, 0, 0.075);
}

/* Global */
.fpb__input,
.fpb__input *,
.fpb__input ::before,
.fpb__input ::after,
.fpb__modal,
.fpb__modal *,
.fpb__modal ::before,
.fpb__modal ::after {
  box-sizing: border-box;
}

/* Default component styling */
.fpb__input,
.fpb__modal {
  color: var(--fp-body-color);
  font-family:
    system-ui,
    -apple-system,
    'Segoe UI',
    Roboto,
    'Helvetica Neue',
    'Noto Sans',
    'Liberation Sans',
    Arial,
    sans-serif,
    'Apple Color Emoji',
    'Segoe UI Emoji',
    'Segoe UI Symbol',
    'Noto Color Emoji';
}

/* Inputs */
.fpb__input {
  display: block;

  font-size: 1rem;
  font-weight: 400;
  line-height: 1.5;
  color: var(--fp-body-color);

  appearance: none;
  background-color: var(--fp-body-bg);

  padding: 0.375rem 0.75rem;
  border: 1px solid var(--fp-border-color);
  border-radius: var(--fp-border-radius);

  transition:
    border-color 0.15s ease-in-out,
    box-shadow 0.15s ease-in-out;
}
.fpb__input:hover {
  background-color: var(--fp-body-bg) !important;
  border: 1px solid var(--fp-border-color) !important;
}
.fpb__input:focus {
  outline: 0;
  border-color: var(--fp-ring-color);
  box-shadow: var(--fp-ring-shadow);
}
.fpb__input:disabled {
  pointer-events: none;
  cursor: not-allowed;
  opacity: 0.75;
}
.fpb__dropdown {
  margin: unset; /* CSS reset */
  padding: 0.375rem 2.25rem 0.375rem 0.75rem;
  background-image: var(--fp-select-toggle-img);
  background-repeat: no-repeat;
  background-position: right 0.75rem center;
  background-size: 16px 12px;
}

/* Modals */
.fpb__modal {
  position: fixed;
  max-width: 32rem;
  width: calc(100vw - 1rem);
  height: calc(100vh - 3rem);
  top: 50%;
  left: 50%;

  border: 1px solid var(--fp-border-color-translucent);
  border-radius: var(--fp-border-radius-lg);
  background-color: var(--fp-body-bg);
  box-shadow: var(--fp-box-shadow);

  display: flex;
  flex-direction: column;
  overflow: hidden;

  opacity: 0;
  pointer-events: none;
  transform: translate(-50%, -51%);

  transition:
    opacity 0.5s,
    transform 0.5s;

  z-index: 1055;
}
.fpb__modal.fpb__open {
  opacity: 1;
  pointer-events: all;
  transform: translate(-50%, -50%);
}
.fpb__backdrop {
  position: fixed;
  width: 100vw;
  height: 100vh;
  inset: 0;
  z-index: 1054;

  background-color: #000;
  opacity: 0;
  pointer-events: none;

  transition: opacity 0.5s;
}
.fpb__modal.fpb__open + .fpb__backdrop {
  opacity: 0.5;
  pointer-events: all;
}

.fpb__modal-header {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 1rem;
}
.fp__modal-title {
  margin: 0;
  font-size: 1.25rem;
  font-weight: 700;
  font-family: inherit;
}

.fpb__modal button:hover {
  background-color: transparent !important; /* CSS reset */
}

.fpb__modal-footer {
  display: flex;
  align-items: center;
  padding: 1rem;
  gap: 1rem;
  border-top: 1px solid var(--fp-border-color);
}
.fpb__modal .fpb__input {
  width: 100%;
}

.fpb__btn-close {
  display: grid;
  place-items: center;

  color: var(--fp-tertiary-color);
  font-size: 2rem;
  width: 0.75em;
  height: 0.75em;
  padding: 0;

  line-height: 0;
  appearance: none;
  background: none;
  border: none;
  border-radius: var(--fp-border-radius);
}
.fpb__btn-close:hover {
  color: var(--fp-body-color);
}
.fpb__btn-close:focus-visible {
  outline: 0;
  box-shadow: var(--fp-ring-shadow);
}

/* Accordion */
.fpb__accordion-item {
  margin-top: -1px;
}
.fpb__accordion-toggle {
  --fp-accordion-toggle-img: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%236ea8fe'%3e%3cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e");

  display: flex;
  width: 100%;
  align-items: center;

  color: var(--fp-body-color);
  font-size: 1rem;
  text-align: start;

  appearance: none;
  background: none;
  border: none;
  border-radius: 0;
  border-block: 1px solid var(--fp-border-color) !important;

  padding: 0.5rem 1rem;
  margin: 0;

  transition:
    border-color 0.15s,
    box-shadow 0.15s;
}

.fpb__accordion-toggle::after {
  content: '';
  margin-left: auto;
  width: 1.25rem;
  height: 1.25rem;
  background-image: var(--fp-accordion-toggle-img);
  background-repeat: no-repeat;
  background-size: 100% 100%;
  transition: transform 0.2s;
}
.fpb__accordion-item.fpb__open > .fpb__accordion-toggle::after {
  transform: rotate(-180deg);
}
.fpb__accordion-content {
  --fpb-height: 0;
  max-height: 0;
  overflow: hidden;
  visibility: hidden;
  transition: max-height 0.2s;
}
.fpb__accordion-content > * {
  padding: 0.5rem 1rem;
}
.fpb__accordion-item.fpb__open .fpb__accordion-content {
  --fpb-height: fit-content;
  max-height: var(--fpb-height);
  visibility: visible;
}
.fpb__accordion-toggle:focus {
  outline: 0;
  box-shadow: var(--fp-ring-shadow);
  border-color: var(--fp-ring-color);
}

/* Button */
[role='button'],
button {
  cursor: pointer;
}

.fpb__btn {
  --fpb-variant: var(--fp-primary);

  cursor: pointer;
  font-size: 1rem;
  padding: 0.375rem 0.75rem;
  line-height: 1.5;
  color: var(--fp-light);
  text-align: center;
  user-select: none;
  border: 1px solid var(--fpb-variant);
  background-color: var(--fpb-variant);
  border-radius: var(--fp-border-radius);

  transition:
    color 0.15s,
    background-color 0.15s,
    border-color 0.15s,
    box-shadow 0.15s,
    opacity 0.15s;
}
.fpb__btn:hover {
  opacity: 0.8;
}
.fpb__btn-small {
  font-size: 0.75rem;
  padding: 0.1rem 0.5rem;
}
.fpb__btn-pill {
  border-radius: 9999px;
}
button.fpb__btn-pill:hover {
  /* CSS reset */
  background-color: var(--fpb-variant) !important;
  border-color: var(--fpb-variant) !important;
}
.fpb__btn-secondary {
  --fpb-variant: var(--fp-secondary);
}
.fpb__btn-link {
  color: var(--fpb-variant);
  background: none;
  border: none;
}
.fpb__btn-link::after {
  content: '';
  width: 0px;
  height: 1px;
  display: block;
  background: currentColor;
  opacity: 0;
  transition:
    width 0.2s,
    opacity 0.2s;
}
.fpb__btn-link:hover {
  /* CSS reset */
  background: inherit !important;
}
.fpb__btn-link:hover::after {
  width: 100%;
  opacity: 1;
}

.fpb__hidden-input {
  position: absolute !important;
  clip: rect(0, 0, 0, 0);
  pointer-events: none;
}
.fpb__btn-toggle {
  white-space: nowrap;
  color: var(--fpb-variant);
  background-color: transparent;
}
.fpb__btn-flip,
.fpb__btn-toggle.fpb__active,
input:checked + .fpb__btn-toggle {
  background-color: var(--fpb-variant);
  border-color: var(--fpb-variant);
  color: var(--fp-light);
}
.fpb__btn-flip > * {
  transition: transform 0.25s ease-in-out;
}
input:checked + .fpb__btn-flip > *,
.fpb__btn-flip.fpb__active > * {
  transform: scaleY(-1);
}

.fpb__btn:focus-visible,
input:focus-visible + .fpb__btn-toggle {
  outline: 0;
  opacity: 0.8;
  box-shadow: var(--fp-ring-shadow);
}

.fpb__btn:disabled,
input:disabled + .fpb__btn-toggle {
  opacity: 0.5;
  cursor: not-allowed;
}

/* Input groups */
.fpb__input-group {
  display: flex;
}
.fpb__input-group > *:first-child {
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
}
.fpb__input-group > *:last-child {
  border-top-left-radius: 0;
  border-bottom-left-radius: 0;
}

/* Grid utility */
.fpb__grid-2 {
  display: grid;
  grid-template-columns: 1fr 1fr;
  gap: 0.5rem;
}
.fpb__span-2 {
  grid-column: span 2;
}

.fpb__grow {
  flex-grow: 1;
}

.fpb__hlist {
  display: flex;
  overflow-x: auto;
  gap: 0.5rem;
}

.fpb__hidden {
  display: none !important;
}

/* Text utility */
.fpb__has-icon,
.fpb__has-icon * {
  vertical-align: middle;
}
.fpb__has-icon svg {
  margin-right: 0.25rem;
}

.fpb__primary {
  color: var(--fp-primary);
}

@media (max-width: 576px) {
  .fpb__modal {
    height: calc(100vh - 1rem);
  }
  .fpb__grid-2 {
    display: flex;
    flex-direction: column;
  }
}

